# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  clippy.toml  spec.yaml
.cargo/: config.toml
.sqlx/: query-2b5bba263978ca9dab5158bbde4344c40edc03ec6feb4da546778d2e1dc2e62f.json  query-5e975283de3ef273f138ae1d7d9eaf97d1b3f074c07d483a7b7ea40cbac96549.json  query-6a64d566bf475b7193c1bfcc8c56a7608ebf1c784c879c84c296e9833f0b08c9.json  query-6fd017ac9df7d1b79b3343e3e98098b6be81f310e26c759f85d7e89f26cbd210.json  query-790715cbccb19ec7547f7250fe31816d50340d0972592eefeafcf7cfdbb174a3.json  query-9ab6536d2bf619381573b3bf13507d53b2e9cf50051e51c803e916f25b51abd2.json  query-acf1b96c82ddf18db02e71a0e297c822b46f10add52c54649cf599b883165e58.json  query-b8b9c9b003e9621fe759417d8f9f16b9c8e5705efdef05dbb565cf2f7ab37745.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260603214752_make_status_not_null_in_subscriptions.sql  20260603215216_create_subscription_tokens_table.sql  20260724134614_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  helpers.rs  lib.rs  main.rs  session_state.rs  startup.rs
src/domain/: mod.rs  new_subscriber.rs  parameters.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  post.rs
templates/: change_password.html  confirmation.html  dashboard.html  home.html  login.html
tests/: health_check.rs
tests/api/: helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
