[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Francesco Di Bella"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
rand = { version = "0.10", features = ["std_rng"] }
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.7.0"
config = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
claims = "0.8"
validator = "0.20.0"
tera = { version = "2.0.0", features = ["glob_fs"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "form", "rustls"]

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6"
fake = "5.1.0"
serde_urlencoded = "0.7"
linkify = "0.11.0"

[profile.dev]
debug = 0
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.debugging]
inherits = "dev"
debug = true
